[package]
name = "dyn-logger"
version = "0.2.3"
edition = "2021"
authors = ["koopa1338 <sinner1991@gmail.com>"]
license-file = "LICENSE.md"
description = "Crate to configure tracing logger dynamically via configuration file in toml format."
repository = "https://github.com/koopa1338/dyn-logger"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt",
    "registry",
] }
tracing-appender = "0.2"
thiserror = "1.0"
