[package]
name = "dyn-logger"
version = "1.0.0"
edition = "2024"
authors = ["koopa1338 <sinner1991@gmail.com>"]
license = "EUPL-1.2"
description = "Crate to configure tracing logger dynamically via configuration file in toml format."
repository = "https://github.com/koopa1338/dyn-logger"
keywords = ["logger", "files", "tracing"]
categories = ["command-line-interface", "config", "development-tools::debugging"]
rust-version = "1.85.1"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt",
    "registry",
] }
tracing-appender = "0.2"
thiserror = "2.0"
